--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -52,8 +52,5 @@ input[type="checkbox"]:checked::before {
 
 a {
   color: #5E60CE;
-}
-
-* {
-  outline: 1px solid yellowgreen;
+  text-overflow: ellipsis;
 }
